# pps-agustin_conti_2023

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  referencia_plan_trabajo.md
2_workplan/: index.html
3_body/: index.html
4_conclusion/: index.html
5_bibliography/: index.html
6_attachments/: index.html
ansible/: hosts.yaml  playbook.yaml
docs/: 02_workplan.md  03_cover_page.md  04_abstract.md  05_index.md  06_body.md  07_conclusion.md  08_bibliography.md  09_attachments.md  2_workplan.md  3_body.md  4_conclusion.md  5_bibliography.md  6_attachments.md  index.md
docs/css/: extra.css
kubeflow/: temp_docs_kubeflow _2.md  temp_docs_kubeflow.md
kubernetes/k0s/: Vagrantfile  k0s-k0sctl-vagrant.md  k0sctl.yaml
kubernetes/k0s/scripts/: add_routes.sh  install_curl.sh  list_interfaces.sh
kubernetes/k8s/: Vagrantfile  config_root_ssh_user.sh  config_vms.yaml  error-k8s.md  temp_docs_k8s.md
kubernetes/k8s/.backups/: settings.yaml.backup  user_settings.yaml.backup
kubernetes/k8s/ansible/: cluster_reset.yml  cluster_setup.yml  inventory.yml  inventory_lab.yml  inventory_local.yml  reset.yml  site.yml
kubernetes/k8s_fixed/: Vagrantfile  settings.yaml  temp_docs_k8s_fixed.md
pps-docs/: mkdocs.yml
pps-docs/docs/: about.md  attachments.md  bibliography.md  body.md  conclusion.md  index.md  workplan.md
search/: search_index.json
terraform/: create_template.sh  main.tf  terraform.md  vars.tf
test_cluster_lab/: temp_docs_test-cluster-lab.md
vagrant/: Vagrantfile
vagrant/ansible/: inventory.yaml  playbook.yaml
(+59 files in other folders)
