[tool.poetry]
name = "pps-agustin-conti-2023"
version = "0.1.0"
description = "Poetry Virtual Environment"
authors = ["aagustinconti <mail@aagustinconti.com.ar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^8.4.0"
mkdocs = "1.5.3"
mkdocs-material = "^9.4.7"
mkdocs-material-extensions = "^1.3"
mkdocs-pdf-export-plugin = "^0.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
